# library-management

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  test.db
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-auth-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-CONTEXT.md  (+10 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  test.db
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users_and_refresh_tokens.py  0002_create_password_reset_tokens.py
backend/app/: config.py  database.py  main.py
backend/app/core/: exceptions.py  security.py
backend/app/dependencies/: auth.py  db.py
backend/app/models/: __init__.py  base.py  buku.py  password_reset_token.py  peminjaman.py  pengguna.py  refresh_token.py  salinan_buku.py  user.py
backend/app/routers/: anggota.py  auth.py  buku.py  dashboard.py  peminjaman.py  protected_demo.py
backend/app/schemas/: anggota.py  auth.py  dashboard.py  peminjaman.py  user.py
backend/app/services/: auth_service.py  email_service.py
backend/app/templates/email/: password_reset.html
backend/tests/: conftest.py  test_anggota.py  test_auth.py  test_buku.py  test_dashboard.py  test_health.py  test_peminjaman.py
docs/: PRD.md
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx  router.jsx
(+62 files in other folders)
