[project]
name = "library-backend"
version = "0.1.0"
description = "Library Management System — backend (FastAPI + SQLAlchemy async + PostgreSQL)"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.115,<0.137",
  "sqlalchemy>=2.0.30",
  "alembic>=1.18,<2.0",
  "pydantic>=2.10",
  "pydantic-settings>=2.6",
  "pwdlib[argon2]>=0.2",
  "pyjwt>=2.9",
  "asyncpg>=0.30",
  "psycopg[binary]>=3.2",
  "python-multipart>=0.0.12",
  "fastapi-mail>=1.4",
  "jinja2>=3.1",
  "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "ruff",
  "mypy",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
